# boligmarkedet

./: plan.md  pyproject.toml  test_phase2.py  test_scrapers.py
.cursor/rules/: rules.mdc
data/: boligmarkedet.duckdb
docs/: boliga-for-sale-api-openapi-schema.json.json  boliga-sold-api-openapi-schema.json  boliga_api_documentation.md  project.md
src/boligmarkedet/: __init__.py  __main__.py  main.py
src/boligmarkedet/api/: client.py
src/boligmarkedet/config/: database.py  settings.py
src/boligmarkedet/database/: __init__.py  migrations.py  models.py  operations.py
src/boligmarkedet/scrapers/: __init__.py  active_scraper.py  base.py  sold_scraper.py
src/boligmarkedet/utils/: logging.py  rate_limiter.py  validators.py
