[project]
name = "boligmarkedet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kasper Junge", email = "kasperjuunge@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.0",
]

[project.scripts]
boligmarkedet = "boligmarkedet:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
