[project]
name = "boligmarkedet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kasper Junge", email = "kasperjuunge@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "duckdb>=1.3.1",
    "httpx>=0.28.1",
    "pandas>=2.3.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "tenacity>=9.1.2",
]

[project.scripts]
boligmarkedet = "boligmarkedet:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
